# libassist-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/: CODEOWNERS
.github/workflows/: release.yml  rust.yml
src/: ffi.rs  helpers.c  lib.rs  wrappers.rs
tests/: smoke.rs
